fixed alignment and made hour forecast scrollable

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,8 +30,8 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
-    margin-top:10px;
-    padding: 10px 0px;
+    margin-top:0px;
+    padding: 0px;
     color: #0c6327;
     /*background-color: #000000;
     border-radius: 6px;
