--- a/src/css/HourlyTemp.css
+++ b/src/css/HourlyTemp.css
@@ -6,7 +6,9 @@
     background-color: #b9cee0;
     border: 1px #ececec solid;
     border-radius:5px;
-    margin:3px;
+    margin:0 5px;
+    vertical-align: top;
+    white-space:initial;
 }
 .HourlyTemp-top-left {
     width:49%;
@@ -34,7 +36,7 @@
 }
 .HourlyTemp-description {
     display: inline-block;
-    font-size: 14px;
+    font-size: 13px;
     color: #ff4b13;
     font-weight: bold;
 }
